2000-07-31  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PREPARE_FDS): New macro, pulled out of
	(_AC_INIT_PREPARE): here, where it is called from.
	* aclang.m4 (_AC_PROG_CC_G, _AC_PROG_CXX_G): Don't test -z "`foo`".

2000-07-31  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_DIVERT(INIT_PARSE_ARGS)): Rename as...
	(_AC_DIVERT(PARSE_ARGS)): this.  Adjust dependencies.
	(AC_ARG_WITH): Remove spurious newline.
	(AC_ARG_VAR): No longer save precious variables in
	ac_configure_args, rather snapshot them twice (one kept
	unmodified, another one to be written to/overwritten by the cache
	file).
	(AC_CACHE_SAVE): Let the cache variables named `ac_cv_env_*'
	be overwritten when loading the cache (i.e., don't use the
	: ${foo=...} trick).
	(_AC_ARG_VAR_VALIDATE): Compare the two snapshots of the precious
	variables.
	(_AC_INIT_PREPARE): Call it after having loaded the cache file.

2000-07-28  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_LANG_CONFTEST, _AC_PROG_CC_GNU, _AC_PROG_CXX_GNU,
	_AC_PROG_F77_GNU): Use ac_ext.  Use _ACEOF instead of ACEOF.

2000-07-28  Akim Demaille  <akim@epita.fr>

	* autoconf.sh (--warnings): Catch `no-category', not `nocategory'.
	* autoheader.sh: Likewise.
	* acgeneral.m4 (_AC_WARNING_IFELSE): Adjust.

2000-07-28  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Installation Directory Variables): New
	section, Eved off from `Preset Output Variables', i.e., was a
	small part of it, grew independent, and is its equal (at least).
	(Coding Style): `$#' padding.
	* Makefile.am (editsh, editpl): Do what the doc says you do: use
	@datadir\@ instead of @''datadir''@.

2000-07-28  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_PROG_CC_GNU, _AC_PROG_CXX_GNU,
	_AC_PROG_F77_GNU): Use ac_ext.  Use ACEOF instead of EOF.
	(AC_LANG_CONFTEST): New macro.
	(_AC_PROG_CC_G, AC_PROG_CC_C_O, _AC_PROG_CXX_G, AC_PROG_F77_C_O,
	_AC_PROG_F77_V_OUTPUT): Use it.
	* acgeneral.m4 (AC_TRY_CPP, AC_EGREP_CPP, AC_COMPILE_IFELSE,