@@ -1086,7 +1086,7 @@ $1])dnl
 # The second quote in the translit is just to cope with font-lock-mode
 # which sees the opening of a string.
 define([AC_REVISION],
-[AC_DIVERT([REVISION], [@%:@ From configure.in translit([$1], $"")])dnl
+[AC_DIVERT([REVISION], [@%:@ From configure.in translit([$1], $"").])dnl
 ])
 
 
@@ -1735,6 +1735,8 @@ ifset([AC_PACKAGE_STRING],
   cat <<\EOF
 AC_DIVERT_POP()dnl
 AC_DIVERT_PUSH([HELP_END])dnl
+ifset([AC_PACKAGE_BUGREPORT], [
+Report bugs to <AC_PACKAGE_BUGREPORT>.])
 EOF
 fi
 
@@ -1933,9 +1935,12 @@ AC_DIVERT_POP()dnl
 # ---------------
 define([_AC_INIT_NOTICE],
 [AC_DIVERT([NOTICE],
-[# Guess values for system-dependent variables and create Makefiles.
-@%:@ Generated by Autoconf AC_ACVERSION.])dnl
-])
+[@%:@ Guess values for system-dependent variables and create Makefiles.
+@%:@ Generated by Autoconf AC_ACVERSION[]dnl
+ifset([AC_PACKAGE_STRING], [ for AC_PACKAGE_STRING]).
+ifset([AC_PACKAGE_BUGREPORT], [@%:@
+@%:@ Report bugs to <AC_PACKAGE_BUGREPORT>.])dnl
+])])
 
 
 # _AC_INIT_COPYRIGHT
